--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@nextui-org/react": "^2.4.8",
     "@tailwindcss/forms": "^0.5.7",
     "@vercel/postgres": "^0.8.0",
+    "@xyflow/react": "^12.3.4",
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
