--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "elkjs": "^0.9.3",
     "framer-motion": "^11.11.11",
     "katex": "^0.16.11",
     "next": "^15.0.0",
@@ -39,7 +40,8 @@
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "eslint-config-next": "15.0.3",
     "prettier": "3.3.3",
-    "prettier-plugin-organize-imports": "^4.1.0"
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "web-worker": "^1.3.0"
   },
   "pnpm": {
     "overrides": {
